syntax="proto3";

package pb;

import "transaction.proto";

option go_package = "github.com/gufir/money-management/pb";

message GetTransactionRequest {
}

message GetTransactionResponse {
    repeated Transaction transaction = 1;
}